# ros_goldo_rplidar

./: CMakeLists.txt  README.md  package.xml
libs/: CMakeLists.txt
libs/rplidar_sdk/: CMakeLists.txt
src/: goldo_rplidar_node.cpp
